--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://linkedin.com/'"
+            onclick="location.href='https://www.linkedin.com/in/el-fateh-hamza-400398258?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app'"
           />
           <img
             src="./assets/github.png"
