--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a></p>
+          <p><a href="mailto:elfatehhamza@gmail.com">elfatehhamza@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
@@ -360,7 +360,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/el-fateh-hamza-400398258?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app">LinkedIn</a></p>
         </div>
       </div>
     </section>
@@ -375,7 +375,7 @@
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2023 John Doe. All Rights Reserved.</p>
+      <p>Copyright &#169; 2023 Hamza El fateh. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
   </body>
