--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://www.linkedin.com/in/el-fateh-hamza-400398258?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app'"
+            onclick="location.href='https:/www.linkedin.com/in/el-fateh-hamza-400398258?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app'"
           />
           <img
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https://github.com/'"
+            onclick="location.href='https:/github.com/Hamzaf1'"
           />
         </div>
       </div>
@@ -77,7 +77,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="./assets/about-pic.png"
+            src="./assets/about-pic2.jpg"
             alt="Profile picture"
             class="about-pic"
           />
@@ -91,7 +91,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>2+ years <br />Frontend Development</p>
+              <p><strong> Fresh graduate </strong><br />Frontend Development</p>
             </div>
             <div class="details-container">
               <img
@@ -100,17 +100,12 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>B.Sc. Bachelors Degree<br />M.Sc. Masters Degree</p>
+              <p><strong> DTS . IT Development</strong><br /><strong>B.CS. Bachelors Degree</strong></p>
             </div>
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
+              I hold a DTS in IT.Devlopement at IISGA, I developed a solid foundation in IT Development and software engineering. I studied UML as a subject, it helped me to learn JAVA in deep. Through my studies, hands on projects gave me skill in SQL language. I also did internships at TAQA Morocco and I gained more practical knowledge. More importantly, this educational experience has given me the tools to handle difficult development problems and deliver fresh solutions in a technology-obsessed environment.
             </p>
           </div>
         </div>
