--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/EL Fateh Hamza (4).pdf')"
+            onclick="window.open('https:/cvdesignr.com/p/66c4f6be67968')"
           >
             Download CV
           </button>
