--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('https:/cvdesignr.com/p/66c4f6be67968')"
+            onclick="window.open('assets/CV_2024-08-20_El fateh_Hamza.pdf')"
           >
             Download CV
           </button>
